--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,17 @@
           <div class="month-year">07/2021</div>
         </div>
       </div>
-      <i class="fa-solid fa-bars header__bars"></i>
+      <input type="checkbox" id="check" />
+          <div class="barMenu">  
+                 
+            <svg class="barMenulogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
+            <label for="check"> </label> 
+          </div>
+          <div class="links-mobile">
+            <a class="js__login"> Đăng Nhập</a>
+            <a href="#register"> Đăng Ký </a>
+            <a href="">Trang cá nhân</a>
+          </div>
       <div class="header-right">
         <div class="header-right-slogan" style="text-align: right;">Chào mừng bạn đến với Triển lãm ageLOC EXPO-PRS 2021
           </br> Đồng hành với bạn là Đại
