--- a/index.html
+++ b/index.html
@@ -44,18 +44,25 @@
           <div class="day">16-17</div>
           <div class="month-year">07/2021</div>
         </div>
+        <!-- <div class="header-left-slogan" style="text-align: right;">Chào mừng bạn đến với Triển lãm ageLOC EXPO-PRS 2021
+        </br> Đồng hành với bạn là Đại
+        diện
+        Đối tác Thương hiệu <strong>Hồ Đan Thư</strong> </div> -->
       </div>
       <input type="checkbox" id="check" />
-          <div class="barMenu">  
-                 
-            <svg class="barMenulogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"/></svg>
-            <label for="check"> </label> 
-          </div>
-          <div class="links-mobile">
-            <a class="js__login"> Đăng Nhập</a>
-            <a href="#register"> Đăng Ký </a>
-            <a href="">Trang cá nhân</a>
-          </div>
+      <div class="barMenu">
+
+        <svg class="barMenulogo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+          <path
+            d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" />
+        </svg>
+        <label for="check"> </label>
+      </div>
+      <div class="links-mobile">
+        <a class="js__login"> Đăng Nhập</a>
+        <a href="#register"> Đăng Ký </a>
+        <a href="">Trang cá nhân</a>
+      </div>
       <div class="header-right">
         <div class="header-right-slogan" style="text-align: right;">Chào mừng bạn đến với Triển lãm ageLOC EXPO-PRS 2021
           </br> Đồng hành với bạn là Đại
@@ -70,8 +77,8 @@
         </div>
       </div>
   </div>
-  <div class="slider">
-    <!-- <div class="slider__icon">
+  <div class="slider__container">
+    <div class="slider__container--icon">
       <a href="">
         <img
           class="icon1"
@@ -80,10 +87,17 @@
         />
         <img src="./img/Group 69.png" alt="phone-online-icon" />
       </a>
-    </div> -->
-    <img src="/img/Rectangle 3.png" alt="Slide 1" />
-    <img src="/img/Rectangle 3.png" alt="Slide 2" />
-    <img src="/img/Rectangle 3.png" alt="Slide 3" />
+    </div>
+    <div class="slider">
+      <div
+        class="slider--item"
+        style="background-image: url(./img/Rectangle\ 3.png)"
+      ></div>
+      <div
+        class="slider--item"
+        style="background-image: url(./img/Rectangle\ 3.png)"
+      ></div>
+    </div>
   </div>
   </header>
   <div class="container">
@@ -239,7 +253,7 @@
     </div>
 
   </footer>
-  
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
